app/assets/stylesheets/indicators.scss
/* ... */
.tippy-tooltip[x-placement^='top'] .tippy-roundarrow:after {
  top: 1px;
  -webkit-transform: rotate(180deg);
  transform: rotate(180deg);
}
.tippy-tooltip[x-placement^='top'] .tippy-arrow {
  border-top-color: #565656;
}
.tippy-tooltip[x-placement^='top'] .tippy-arrow:after {
  border-top: 8px solid #565656;
  top: -8px;
}
.tippy-tooltip[x-placement^='top'] .tippy-arrow:before {
  border-top: 8px solid #000;
  bottom: -2px;
}
.tippy-tooltip[x-placement^='bottom'] .tippy-roundarrow:after {
  top: -1px;
}
.tippy-tooltip[x-placement^='bottom'] .tippy-arrow {
  border-bottom-color: #565656;
}
.tippy-tooltip[x-placement^='bottom'] .tippy-arrow:after {
  border-bottom: 8px solid #565656;
  bottom: -8px;
}
.tippy-tooltip[x-placement^='bottom'] .tippy-arrow:before {
  border-bottom: 8px solid #000;
  bottom: -5px;
}
.tippy-tooltip[x-placement^='left'] .tippy-roundarrow:after {
  left: 1px;
  top: 0;
  -webkit-transform: rotate(90deg);
  transform: rotate(90deg);
}
.tippy-tooltip[x-placement^='left'] .tippy-arrow {
  border-left-color: #565656;
}
.tippy-tooltip[x-placement^='left'] .tippy-arrow:after {
  border-left: 7px solid #565656;
  left: -7px;
}
.tippy-tooltip[x-placement^='left'] .tippy-arrow:before {
  border-left: 7px solid #000;
  left: -6px;
}
.tippy-tooltip[x-placement^='right'] .tippy-roundarrow:after {
  left: -1px;
  top: 0;
  -webkit-transform: rotate(-90deg);
  transform: rotate(-90deg);
}
.tippy-tooltip[x-placement^='right'] .tippy-arrow {
  border-right-color: #565656;
}
.tippy-tooltip[x-placement^='right'] .tippy-arrow:after {
  border-right: 7px solid #565656;
  right: -7px;
}
.tippy-tooltip[x-placement^='right'] .tippy-arrow:before {
  border-right: 7px solid #000;
  right: -6px;
}
.tippy-tooltip[x-placement^='bottom'] .tippy-arrow,
.tippy-tooltip[x-placement^='bottom'] .tippy-roundarrow,
.tippy-tooltip[x-placement^='top'] .tippy-arrow,
.tippy-tooltip[x-placement^='top'] .tippy-roundarrow {
  -webkit-transform: translateX(-1px);
  transform: translateX(-1px);
}
.tippy-tooltip[x-placement^='bottom'] .tippy-arrow:after,
.tippy-tooltip[x-placement^='bottom'] .tippy-arrow:before,
.tippy-tooltip[x-placement^='top'] .tippy-arrow:after,
.tippy-tooltip[x-placement^='top'] .tippy-arrow:before {
  left: -7px;
  border-left: 7px solid transparent;
  border-right: 7px solid transparent;
}
.tippy-tooltip[x-placement^='left'] .tippy-arrow,
.tippy-tooltip[x-placement^='left'] .tippy-roundarrow,
.tippy-tooltip[x-placement^='right'] .tippy-arrow,
.tippy-tooltip[x-placement^='right'] .tippy-roundarrow {
  -webkit-transform: translateY(-1px);
  transform: translateY(-1px);
}
.tippy-tooltip[x-placement^='left'] .tippy-arrow:after,
.tippy-tooltip[x-placement^='left'] .tippy-arrow:before,
.tippy-tooltip[x-placement^='right'] .tippy-arrow:after,
.tippy-tooltip[x-placement^='right'] .tippy-arrow:before {
  top: -7px;
  border-top: 7px solid transparent;
  border-bottom: 7px solid transparent;
}

/* Gauge */
.gauge-wrapper {
  width: 300px;
  height: 160px;
  margin: 60px auto 40px;
}
.gauge:before {
  background-color: #2c2c2c;
}
.gauge-value {
  white-space: nowrap;
}
.gauge-values .gauge-value:nth-child(1) {
  transform: rotate(-70deg) translate(4px, -15px);
}
.gauge-values .gauge-value:nth-child(2) {
  transform: rotate(-36deg) translate(-10px, -35px);
}
.gauge-values .gauge-value:nth-child(3) {
  transform: translate(0px, -10px);
}
.gauge-values .gauge-value:nth-child(4) {
  transform: rotate(38deg) translate(-16px, -13px);
}
.gauge-values .gauge-value:nth-child(5) {
  transform: rotate(70deg) translate(0px, -15px);
}
.gauge-arrow {
  filter: invert(17%) sepia(7%) saturate(0%) hue-rotate(261deg) brightness(87%)
    contrast(93%);
}
.gauge-marks {
  display: none;
}
.gauge-color {
  stroke-width: 24;
}

/* Desktop */
@media screen and (min-width: 1025px) {
  .graph-container {
    min-height: 340px;
  }
}

/* Tablet */
@media screen and (min-width: 741px) and (max-width: 1024px) {
  .gauge-wrapper {
    width: 260px;
    height: 140px;
  }
}

/* Non-Mobile */
@media screen and (min-width: 741px) {
  .paper.with-sidebar:not(:first-child) {
    padding-left: 30px;
  }
  .paper.with-sidebar:not(:last-child) {
    padding-right: 30px;
  }
  .sidebar.sidebar-right {
    border-left: none;
  }
  .sidebar.sidebar-left {
    border-right: none;
  }
}
/* ... */

